deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ohmesh
  labels:
    app.kubernetes.io/name: ohmesh
