deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohmesh
  labels:
    app.kubernetes.io/name: ohmesh
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ohmesh
  ports:
    - name: http
      port: 80
      targetPort: http
